# agentlie

./: .build_metadata.slices.yaml  .build_metadata.yaml  .builder_prompt.md  .gitignore  CHANGELOG.md  PUBLISH_BLOCKED.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: README.md  demo.tape
docs/: demo.tape
examples/: replay_demo.sh
src/agentlie/: __init__.py  cli.py  codex.py  extractor.py  models.py  parser.py  report.py  verifier.py
tests/: test_parser.py  test_v020.py  test_v030.py  test_v040.py  test_v050.py  test_v060.py  test_v070.py  test_verifier.py
tests/fixtures/: lying_transcript.jsonl
web/: site.json
