[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlie"
version = "0.4.0"
description = "Claude Code Agent honesty verifier — one command surfaces fixes the Coding Agent claimed but never made."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "supermario_leo", email = "leo.stack@outlook.com" }]
keywords = ["claude-code", "coding-agent", "agent", "agent-evaluation", "ai-honesty"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "click>=8.1,<9",
  "rich>=13.7,<15",
  "pydantic>=2.7,<3",
  "tree-sitter>=0.23,<1",
  "tree-sitter-language-pack>=0.3,<1",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40,<1"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]

[project.scripts]
agentlie = "agentlie.cli:main"

[project.urls]
Homepage = "https://github.com/supermario-leo/agentlie"
Repository = "https://github.com/supermario-leo/agentlie"
Issues = "https://github.com/supermario-leo/agentlie/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentlie"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
